@@ -122,6 +122,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #16220: wsgiref now always calls close() on an iterable response.
+  Patch by Brent Tubbs.
+
 - Issue #16176: Properly identify Windows 8 via platform.platform()
 
 - Issue #15756: subprocess.poll() now properly handles errno.ECHILD to
